--- a/clover/src/app/components/car/rent-a-car/rent-a-car.component.css
+++ b/clover/src/app/components/car/rent-a-car/rent-a-car.component.css
@@ -1,353 +1,637 @@
-body, html {
-   background-attachment: fixed;
-       background-size: cover;
-       display: flex;
-       align-items: center;
-       justify-content: center;
-       height: 100vh;
-       margin: 0;
- }
-
- .bg {
-   background-image: url('https://mdbootstrap.com/img/Photos/Others/images/91.jpg');
-   height: 100%;
-   width: 100%;
- 
-   background-position: center;
-   background-repeat: no-repeat;
-   background-size: cover;
- }
-
-
- .conteiner{
-   margin-left: 32%;
-   margin-right: 7%;
-   margin-top: -30%;
-   height: 80%;
-   padding: 20px;
-
-
-   padding: 25px;
-   border-radius: 10px;
-   background:rgba(137, 153, 158, 0.8);
-}
-
-.about{
-   margin-left: 6%;
-   margin-top: 2%;
-   width: 87%;
-}
-
-
-
-
-
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
-article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {display: block;}
-.clear{clear:both;}
-img{max-width:100%;}
-
 body {
-background-size: cover;
-font-family: 'Open Sans', sans-serif;
-background-attachment: fixed;
-background-position: center;
-}
+   font-family: "Open Sans", sans-serif;
+   color: #444444;
+ }
+ 
+ a {
+   color: #3498db;
+ }
+ 
+ a:hover {
+   color: #5faee3;
+   text-decoration: none;
+ }
+ 
+ h1, h2, h3, h4, h5, h6 {
+   font-family: "Raleway", sans-serif;
+ }
 
-.main-agileinfo{
-margin-left:6%;
-margin-top: 4%;
-width: 300px;
-}
-
-.resp-tabs-list {
-    width: 100%;
-    height: 100%;
-    padding: 17px 20px;
-    box-sizing: border-box;
-    font-size: 14px;
-    font-weight: 700;
-    color: #fff;
-    text-transform: uppercase;
-    border: none;
-    background-color: #FA396F;
-    border-radius: 10px;
-    border-bottom-left-radius: 0%;
-    border-bottom-right-radius: 0%;
-}
-
-form{
-background:rgba(137, 153, 158, 0.8);
-padding: 25px;
-border-radius: 10px;
-border-top-left-radius: 0%;
-border-top-right-radius: 0%;
-}
-
-
-h3 {
-font-size: 16px;
-color:#fff;
-margin-bottom: 7px;
-}
-
-.from,.to,.date,.depart,.return{
-    float:left;
-    
-}
-
-.from,.to,.date{
-margin-bottom:20px;
-
-}
-
-input[type="text"]{
-padding:10px;
-width:93%;
-float:left;
-}
-
-input#datepicker,input#datepicker1,input#datepicker2,input#datepicker3 {
-width: 85%;
-margin-bottom:10px;
-}
-
-
-
-.form-submit {
-    width: 100%;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -o-border-radius: 5px;
-    -ms-border-radius: 5px;
-    padding: 17px 20px;
-    box-sizing: border-box;
-    font-size: 14px;
-    font-weight: 700;
-    color: #fff;
-    text-transform: uppercase;
-    border: none;
-    background-color: #FA396F;
-}
-
-
-
-
-
-
-.table{
-
-   background: rgba(0, 0, 0, 0.3);
-}
-
-.param {
-   margin-bottom: 7px;
-   line-height: 1.4;
-}
-.param-inline dt {
-   display: inline-block;
-}
-.param dt {
+ #header {
+   height: 80px;
+   z-index: 997;
+   transition: all 0.5s;
+   margin-top: 5%;
+ }
+ 
+ #header.header-scrolled {
+   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+   height: 60px;
+   background: #fff;
+ }
+ 
+ #header .logo h1 {
+   font-size: 32px;
    margin: 0;
-   margin-right: 7px;
+   padding: 0;
+   line-height: 1;
+   font-weight: 700;
+   letter-spacing: 1px;
+ }
+ 
+ #header .logo h1 a, #header .logo h1 a:hover {
+   color: #222222;
+   text-decoration: none;
+ }
+ 
+ #header .logo img {
+   padding: 0;
+   margin: 0;
+   max-height: 40px;
+ }
+ 
+ @media (max-width: 768px) {
+   #header {
+     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+     height: 60px;
+     background: #fff;
+   }
+   #header .logo h1 {
+     font-size: 28px;
+   }
+ }
+
+
+
+
+
+ .back-to-top {
+   position: fixed;
+   display: none;
+   right: 15px;
+   bottom: 15px;
+   z-index: 99999;
+ }
+ 
+ .back-to-top i {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   font-size: 24px;
+   width: 40px;
+   height: 40px;
+   border-radius: 4px;
+   background: #3498db;
+   color: #fff;
+   transition: all 0.4s;
+ }
+ 
+ .back-to-top i:hover {
+   background: #57aae1;
+   color: #fff;
+ }
+
+
+
+
+
+
+
+
+
+ .nav-menu, .nav-menu * {
+   margin: 0;
+   padding: 0;
+   list-style: none;
+ }
+ 
+ .nav-menu > ul > li {
+   position: relative;
+   white-space: nowrap;
+   float: left;
+ }
+ 
+ .nav-menu a {
+   display: block;
+   position: relative;
+   color: #555555;
+   padding: 8px 0 12px 25px;
+   transition: 0.3s;
+   font-size: 14px;
+   font-family: "Open Sans", sans-serif;
+ }
+ 
+ .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
+   color: #3498db;
+   text-decoration: none;
+ }
+ 
+ .nav-menu .get-started a {
+   background: #3498db;
+   color: #fff;
+   border-radius: 50px;
+   margin: 0 0 0 30px;
+   padding: 10px 25px;
+ }
+ 
+ .nav-menu .get-started a:hover {
+   background: #57aae1;
+   color: #fff;
+ }
+ 
+ .nav-menu .drop-down ul {
+   display: block;
+   position: absolute;
+   left: 25px;
+   top: calc(100% + 30px);
+   z-index: 99;
+   opacity: 0;
+   visibility: hidden;
+   padding: 10px 0;
+   background: #fff;
+   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+   transition: ease all 0.3s;
+   border-radius: 5px;
+ }
+ 
+ .nav-menu .drop-down:hover > ul {
+   opacity: 1;
+   top: 100%;
+   visibility: visible;
+ }
+ 
+ .nav-menu .drop-down li {
+   min-width: 180px;
+   position: relative;
+ }
+ 
+ .nav-menu .drop-down ul a {
+   padding: 10px 20px;
+   font-size: 14px;
+   text-transform: none;
+   color: #222222;
+ }
+ 
+ .nav-menu .drop-down ul a:hover, .nav-menu .drop-down ul .active > a, .nav-menu .drop-down ul li:hover > a {
+   color: #3498db;
+ }
+ 
+ .nav-menu .drop-down > a:after {
+   content: "\ea99";
+   font-family: IcoFont;
+   padding-left: 5px;
+ }
+ 
+ .nav-menu .drop-down .drop-down ul {
+   top: 0;
+   left: calc(100% - 30px);
+ }
+ 
+ .nav-menu .drop-down .drop-down:hover > ul {
+   opacity: 1;
+   top: 0;
+   left: 100%;
+ }
+ 
+ .nav-menu .drop-down .drop-down > a {
+   padding-right: 35px;
+ }
+ 
+ .nav-menu .drop-down .drop-down > a:after {
+   content: "\eaa0";
+   font-family: IcoFont;
+   position: absolute;
+   right: 15px;
+ }
+ 
+ @media (max-width: 1366px) {
+   .nav-menu .drop-down .drop-down ul {
+     left: -90%;
+   }
+   .nav-menu .drop-down .drop-down:hover > ul {
+     left: -100%;
+   }
+   .nav-menu .drop-down .drop-down > a:after {
+     content: "\ea9d";
+   }
+ }
+
+
+
+
+
+
+
+
+
+ #hero {
+   width: 100%;
+   height: 70vh;
+   margin-top: 70px;
+   margin-bottom: 10%;
+ }
+ 
+ #hero h1 {
+   margin: 0 0 10px 0;
+   font-size: 48px;
+   font-weight: 700;
+   line-height: 56px;
+   color: black;
+ }
+ 
+ #hero h2 {
+   color: #484848;
+   margin-bottom: 50px;
+   font-size: 24px;
+ }
+ 
+ #hero .btn-get-started {
+   font-family: "Raleway", sans-serif;
+   font-weight: 500;
+   font-size: 16px;
+   letter-spacing: 1px;
+   display: inline-block;
+   padding: 10px 30px;
+   border-radius: 50px;
+   transition: 0.5s;
+   color: #3498db;
+   border: 2px solid #3498db;
+ }
+ 
+ #hero .btn-get-started:hover {
+   background: #3498db;
+   color: #fff;
+ }
+ 
+ #hero .animated {
+   animation: up-down 2s ease-in-out infinite alternate-reverse both;
+ }
+ 
+ @media (min-width: 1024px) {
+   #hero {
+     background-attachment: fixed;
+   }
+ }
+ 
+ @media (max-width: 991px) {
+   #hero {
+     height: 100vh;
+   }
+   #hero .animated {
+     -webkit-animation: none;
+     animation: none;
+   }
+   #hero .hero-img {
+     text-align: center;
+   }
+   #hero .hero-img img {
+     width: 50%;
+   }
+ }
+ 
+ @media (max-width: 768px) {
+   #hero {
+     margin-top: 20px;
+   }
+   #hero h1 {
+     font-size: 28px;
+     line-height: 36px;
+   }
+   #hero h2 {
+     font-size: 18px;
+     line-height: 24px;
+     margin-bottom: 30px;
+   }
+   #hero .hero-img img {
+     width: 70%;
+   }
+ }
+ 
+ @media (max-width: 575px) {
+   #hero .hero-img img {
+     width: 80%;
+   }
+ }
+ 
+ @-webkit-keyframes up-down {
+   0% {
+     transform: translateY(10px);
+   }
+   100% {
+     transform: translateY(-10px);
+   }
+ }
+ 
+ @keyframes up-down {
+   0% {
+     transform: translateY(10px);
+   }
+   100% {
+     transform: translateY(-10px);
+   }
+ }
+
+
+
+
+ .about{
+   margin-bottom: 26%;
+ }
+
+
+ .about .content h3 {
    font-weight: 600;
-}
-.param-inline dd {
-   vertical-align: baseline;
+   font-size: 26px;
+ }
+ 
+ .about .content ul {
+   list-style: none;
+   padding: 0;
+ }
+ 
+ .about .content ul li {
+   padding-left: 28px;
+   position: relative;
+ }
+ 
+ .about .content ul li + li {
+   margin-top: 10px;
+ }
+ 
+ .about .content ul i {
+   position: absolute;
+   left: 0;
+   top: 2px;
+   font-size: 20px;
+   color: #3498db;
+   line-height: 1;
+ }
+ 
+ .about .content p:last-child {
+   margin-bottom: 0;
+ }
+ 
+ .about .content .btn-learn-more {
+   font-family: "Raleway", sans-serif;
+   font-weight: 600;
+   font-size: 14px;
+   letter-spacing: 1px;
    display: inline-block;
+   padding: 12px 32px;
+   border-radius: 50px;
+   transition: 0.3s;
+   line-height: 1;
+   color: #3498db;
+   -webkit-animation-delay: 0.8s;
+   animation-delay: 0.8s;
+   margin-top: 6px;
+   border: 2px solid #3498db;
+ }
+ 
+ .about .content .btn-learn-more:hover {
+   background: #3498db;
+   color: #fff;
+   text-decoration: none;
+ }
+
+
+
+
+
+
+.services{
+   margin-bottom: 15%;
 }
 
-.param dd {
-   margin: 0;
-   vertical-align: baseline;
-   
-} 
 
-.shopping-cart-wrap .price {
-   color: #007bff;
+ .services .icon-box {
+   padding: 30px;
+   position: relative;
+   overflow: hidden;
+   background: #fff;
+   box-shadow: 0 0 29px 0 rgba(68, 88, 144, 0.12);
+   transition: all 0.3s ease-in-out;
+   border-radius: 8px;
+   z-index: 1;
+ }
+ 
+ .services .icon-box::before {
+   content: '';
+   position: absolute;
+   background: #e1f0fa;
+   right: -60px;
+   top: -40px;
+   width: 100px;
+   height: 100px;
+   border-radius: 50px;
+   transition: all 0.3s;
+   z-index: -1;
+ }
+ 
+ .services .icon-box:hover::before {
+   background: #3498db;
+   right: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+   border-radius: 0px;
+ }
+ 
+ .services .icon {
+   margin: 0 auto 20px auto;
+   padding-top: 10px;
+   display: inline-block;
+   text-align: center;
+   border-radius: 50%;
+   width: 60px;
+   height: 60px;
+   background: #3498db;
+   transition: all 0.3s ease-in-out;
+ }
+ 
+ .services .icon i {
+   font-size: 36px;
+   line-height: 1;
+   color: #fff;
+ }
+ 
+ .services .title {
+   font-weight: 700;
+   margin-bottom: 15px;
    font-size: 18px;
-   font-weight: bold;
-   margin-right: 5px;
-   display: block;
-   
-}
-var {
-   font-style: normal;
-   
-}
-
-.media img {
-   margin-right: 1rem;
-   
-}
-.img-sm {
-   width: 90px;
-   max-height: 75px;
-   object-fit: cover;
-   
-}
-
-
-
-
-.square, .btn {
-   border-radius: 0px!important;
-   
-}
-
-/* -- color classes -- */
-.coralbg {
-   background-color: #FA396F;
-   
-} 
-
-.coral {
-   color: #FA396f;
-   
-}
-
-.turqbg {
-   background-color: #46D8D2;
-   
-}
-
-.turq {
-   color: #46D8D2;
-   
-}
-
-.white {
-   color: #fff!important;
-   
-}
-
-/* -- The "User's Menu Container" specific elements. Custom container for the snippet -- */
-div.user-menu-about {
- z-index: 10;
- background:rgba(137, 153, 158, 0.8);
- margin-top: 20px;
- background-clip: padding-box;
- opacity: 0.97;
- filter: alpha(opacity=97);
- -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
- box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+ }
  
-}
+ .services .title a {
+   color: #111;
+ }
+ 
+ .services .description {
+   font-size: 15px;
+   line-height: 28px;
+   margin-bottom: 0;
+ }
+ 
+ .services .icon-box:hover .title a, .services .icon-box:hover .description {
+   color: #fff;
+ }
+ 
+ .services .icon-box:hover .icon {
+   background: #fff;
+ }
+ 
+ .services .icon-box:hover .icon i {
+   color: #3498db;
+ }
 
-div.user-menu-about .btn-lg {
-   padding: 0px 12px;
-}
 
-div.user-menu-about h4 {
-   font-weight: 300;
-   color: #8b8b8b;
-}
 
-div.user-menu-about a, div.user-menu-about .btn  {
-   transition: 1s ease;
-}
 
-div.user-menu-about .thumbnail {
-  width:100%;
-  min-height:200px;
-  border: 0px!important;
-  padding: 0px;
-  border-radius: 0;
-  border: 0px!important;
-}
 
-/* -- Vertical Button Group -- */
-div.user-menu-about .btn-group-vertical {
-   display: block;
-   
-}
 
-div.user-menu-about .btn-group-vertical>a {
-   padding: 20px 25px;
-   background-color: #46D8D2;
-   color: white;
-   border-color: #fff;
-   
-}
 
-div.btn-group-vertical>a:hover {
-   color: white;
-   border-color: white;
-   
-}
 
-div.btn-group-vertical>a.active {
-   background: #FA396F;
+
+
+
+
+
+ .contact .contact-about h3 {
+   font-size: 28px;
+   margin: 0 0 10px 0;
+   padding: 0;
+   line-height: 1;
+   font-weight: 700;
+   letter-spacing: 1px;
+   color: #222222;
+ }
+ 
+ .contact .contact-about p {
+   font-size: 14px;
+   line-height: 24px;
+   font-family: "Raleway", sans-serif;
+   color: #888;
+ }
+ 
+ .contact .social-links {
+   padding-bottom: 20px;
+ }
+ 
+ .contact .social-links a {
+   font-size: 18px;
+   display: inline-block;
+   background: #fff;
+   color: #3498db;
+   line-height: 1;
+   padding: 8px 0;
+   margin-right: 4px;
+   border-radius: 50%;
+   text-align: center;
+   width: 36px;
+   height: 36px;
+   transition: 0.3s;
+   border: 1px solid #3498db;
+ }
+ 
+ .contact .social-links a:hover {
+   background: #3498db;
+   color: #fff;
+ }
+ 
+ .contact .info {
+   color: #444444;
+ }
+ 
+ .contact .info i {
+   font-size: 32px;
+   color: #3498db;
+   float: left;
+   line-height: 1;
+ }
+ 
+ .contact .info p {
+   padding: 0 0 10px 42px;
+   line-height: 28px;
+   font-size: 14px;
+ }
+ 
+ .contact .php-email-form .validate {
+   display: none;
+   color: red;
+   margin: 0 0 15px 0;
+   font-weight: 400;
+   font-size: 13px;
+ }
+ 
+ .contact .php-email-form .error-message {
+   display: none;
+   color: #fff;
+   background: #ed3c0d;
+   text-align: center;
+   padding: 15px;
+   font-weight: 600;
+ }
+ 
+ .contact .php-email-form .sent-message {
+   display: none;
+   color: #fff;
+   background: #18d26e;
+   text-align: center;
+   padding: 15px;
+   font-weight: 600;
+ }
+ 
+ .contact .php-email-form .loading {
+   display: none;
+   background: #fff;
+   text-align: center;
+   padding: 15px;
+ }
+ 
+ .contact .php-email-form .loading:before {
+   content: "";
+   display: inline-block;
+   border-radius: 50%;
+   width: 24px;
+   height: 24px;
+   margin: 0 10px -6px 0;
+   border: 3px solid #18d26e;
+   border-top-color: #eee;
+   -webkit-animation: animate-loading 1s linear infinite;
+   animation: animate-loading 1s linear infinite;
+ }
+ 
+ .contact .php-email-form input, .contact .php-email-form textarea {
+   border-radius: 0;
    box-shadow: none;
-   color: white;
-   
-}
-/* -- Individual button styles of vertical btn group -- */
-div.user-menu-btns {
-   padding-right: 0;
-   padding-left: 0;
-   padding-bottom: 0;
-   
-}
-
-div.user-menu-btns div.btn-group-vertical>a.active:after{
- content: '';
- position: absolute;
- left: 100%;
- top: 50%;
- margin-top: -13px;
- border-left: 0;
- border-bottom: 13px solid transparent;
- border-top: 13px solid transparent;
- border-left: 10px solid #46D8D2;
+   font-size: 14px;
+ }
  
-}
-
-
-
-.user-pad {
-   padding: 20px 25px;
-}
-
-.no-pad {
-   padding-right: 0;
-   padding-left: 0;
-   padding-bottom: 0;
-}
-
-
-
-
-
-
-.btn1 {
-  width: 50%;
-  margin-bottom: 4%;
-  border: none;
-  float: left;
-  text-align: center;
-  cursor: pointer;
-  text-transform: uppercase;
-  outline: none;
-  overflow: hidden;
-  position: relative;
-  color: #fff;
-  font-weight: 700;
-  font-size: 15px;
-  background: #FA396F;
-  padding: 10px 10px;
-  box-shadow: 0 5px 15px #ce5386;
-  border-radius: 10px;
-}
-
-.link {
-  font-size: 20px;
-  margin-top: 30px;
-}
-
-.link a {
-  background: #78c7d2;
-  font-size: 25px; 
-}
-
+ .contact .php-email-form button[type="submit"] {
+   background: #3498db;
+   border: 0;
+   padding: 10px 24px;
+   color: #fff;
+   transition: 0.4s;
+   border-radius: 50px;
+ }
+ 
+ .contact .php-email-form button[type="submit"]:hover {
+   background: #2383c4;
+ }
+ 
+ @-webkit-keyframes animate-loading {
+   0% {
+     transform: rotate(0deg);
+   }
+   100% {
+     transform: rotate(360deg);
+   }
+ }
+ 
+ @keyframes animate-loading {
+   0% {
+     transform: rotate(0deg);
+   }
+   100% {
+     transform: rotate(360deg);
+   }
+ }
