--- a/clover/src/app/components/car/rent-a-car/rent-a-car.component.html
+++ b/clover/src/app/components/car/rent-a-car/rent-a-car.component.html
@@ -1,163 +1,216 @@
-<body>
-	<div class="bg"> 
-        <div>
-            <div class="about">
-                <div class="row user-menu-about square">
-                    <div class="col-md-7 user-details">
-                         <div class="row coralbg white" style="border-radius: 10px;">
-                            
-                            <div class="col-md-6 no-pad">
-                                 <div class="user-pad"style="border-radius: 10px;">
-                                    <h3>Welcome back, Jessica</h3>
-                                    <h4 class="white"><i class="fa fa-check-circle-o"></i> San Antonio, TX</h4>
-                                    <h4 class="white"><i class="fa fa-twitter"></i> CoolesOCool</h4>
-                                </div>
-                            </div>
+<header id="header" class="fixed-top d-flex align-items-center">
+    <div class="container d-flex align-items-center">
 
-                            <div class="col-md-6 no-pad">
-                                <div class="user-image">
-                                    <img src="https://farm7.staticflickr.com/6163/6195546981_200e87ddaf_b.jpg" class="img-responsive thumbnail">
-                                </div>
-                            </div>
+        <div class="logo mr-auto">
+            <h1 class="text-light"><a href="index.html"><span>Vesperr</span></a></h1>
+          </div>
 
-                        </div>
-                    </div>
-
-                    <div class="col-md-1 user-menu-btns">
-                        <div class="btn-group-vertical square" id="responsive">
-                            <button (click)="showLocations()" class="btn1"><span>Location</span></button>
-                            <button (click)="showRates()" class="btn1" ><span>Rate</span></button>
-                        </div>
-                    </div>
-                
-                    <div class="col-md-4 user-menu user-pad">
-                        <div class="user-menu-content active"><div *ngIf="showStr == 'Locations'" class="user-menu-content active">
-                                <p>LOCATIONS</p>
-                            </div>
-
-                            <div *ngIf="showStr == 'Rates'" class="user-menu-content">
-                                <p> RATES</p>
-                            </div>
-                         </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="main-agileinfo">
-			    <p class="resp-tabs-list"> Find car for you </p>
-				    <form [formGroup]="SearchCarForm" (ngSubmit)="onSubmit()" method="POST" id="signup-form" class="signup-form">	
-
-					    <div class="from">
-						    <h3>Rent a Car Service</h3>
-						    <input type="text" id="Place" class="form-input" formControlName="Place" placeholder="Location or Name"/>
-                            <div *ngIf="SearchCarForm.controls.Place.invalid"></div>
-                        </div>
-                            
-                        <div class="clear"></div>        
-						    <div class="date">
-								<h3>Start Date</h3>
-								<input type="date" class="datepicker" class="form-input" formControlName="StartDate" placeholder="mm/dd/yyyy"/>
-                                    <div *ngIf="SearchCarForm.controls.StartDate.invalid"></div>
-                                    
-                                <h3>End Date</h3>
-								<input type="date" class="datepicker" class="form-input" formControlName="EndDate" placeholder="mm/dd/yyyy"/>
-									<div *ngIf="SearchCarForm.controls.EndDate.invalid"></div>
-						    </div>
-
-						<div class="clear"></div>
-						<div class="clear"></div>
-						<div class="form-group">
-							<input type="submit" routerLink="/car" name="submit" id="submit" class="form-submit" value="Search"/>
-						</div>
-				    </form>	
-			</div>	
-
-            <div class="conteiner">
-                <div>
-                    <table class="table table-hover shopping-cart-wrap">
-                        <thead class="text-muted">
-                            <tr>
-                                <th scope="col">Brand</th>
-                                <th scope="col" width="120">Model</th>
-                                <th scope="col" width="120">Year</th>
-                                <th scope="col" width="200" class="text-right">Price</th>
-                            </tr>
-                         </thead>
-                        <tbody>
-                            <tr *ngFor="let car of allCars">
-                                <td>
-                                    <figure class="media">
-                                        <figcaption class="media-body">
-                                            <h6 class="title text-truncate">Rent a Car</h6>
-                                            <dl class="param param-inline small">
-                                                <dt> Brand: </dt>
-                                                <dd>{{car.brand}}</dd>
-                                            </dl>
-
-                                            <dl class="param param-inline small">
-                                                <dt>Model: </dt>
-                                                <dd>{{car.model}}</dd> 
-                                            </dl>
-                                        </figcaption>
-                                    </figure> 
-                                </td>
-
-                                <td> 
-                                    <div class="price-wrap"> 
-                                        <var class="price">{{car.pricePerDay}}</var> 
-                                        <small class="text-muted">($)</small> 
-                                    </div>
-                                </td>
-
-                                <td class="text-right"> 
-                                    <a title="" href="" class="btn btn-outline-success" data-toggle="tooltip" data-original-title="Save to Wishlist"> <i class="fa fa-heart"></i></a> 
-                                    <a href="" class="btn btn-outline-danger"> × Remove</a>
-                                </td>
-                            </tr>
-
-                            <tr>
-                                <td>
-                                    <figure class="media">
-                                        <div class="img-wrap"><img src="http://bootstrap-ecommerce.com/main/images/items/1.jpg" class="img-thumbnail img-sm"></div>
-                                        <figcaption class="media-body">
-                                            <h6 class="title text-truncate">Product name goes here </h6>
-                                            <dl class="param param-inline small">
-                                                <dt>Size: </dt>
-                                                <dd>XXL</dd>
-                                            </dl>
-                                            <dl class="param param-inline small">
-                                                <dt>Color: </dt>
-                                                <dd>Orange color</dd>
-                                            </dl>
-                                        </figcaption>
-                                    </figure> 
-                                </td>
-
-                                <td> 
-                                    <select class="form-control">
-                                        <option>1</option>
-                                        <option>2</option>	
-                                        <option>3</option>	
-                                        <option>4</option>	
-                                    </select> 
-                                </td>
-
-                                <td> 
-                                    <div class="price-wrap"> 
-                                        <var class="price">USD 35</var> 
-                                        <small class="text-muted">(USD10 each)</small> 
-                                    </div>
-                                </td>
-
-                                <td class="text-right"> 
-                                    <a title="" href="" class="btn btn-outline-success" data-toggle="tooltip" data-original-title="Save to Wishlist"> <i class="fa fa-heart"></i></a> 
-                                    <a href="" class="btn btn-outline-danger btn-round"> × Remove</a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div> 
+      <nav class="nav-menu d-none d-lg-block">
+        <ul>
+          <li class="active"><a fragment="hero" (click)="navigateTo('hero')">Home</a></li>
+          <li><a fragment="about" (click)="navigateTo('about')">About</a></li>
+          <li><a fragment="cars" (click)="navigateTo('cars')">Cars</a></li>
+          <li><a fragment="locations" (click)="navigateTo('locations')">Locations</a></li>
+          <li><a fragment="contact" (click)="navigateTo('contact')">Contact</a></li>
+        </ul>
+      </nav><!-- .nav-menu -->
     </div>
-</body>
+  </header><!-- End Header -->
+
+
+
+
+
+
+  <section id="hero" class="d-flex align-items-center">
+
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
+          <h1 data-aos="fade-up">Grow your business with Vesperr</h1>
+          <h2 data-aos="fade-up" data-aos-delay="400">We are team of talanted designers making websites with Bootstrap</h2>
+          <div data-aos="fade-up" data-aos-delay="800">
+            <a fragment="about" (click)="navigateTo('about')" class="btn-get-started scrollto">Get Started</a>
+          </div>
+        </div>
+        <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left" data-aos-delay="200">
+          <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
+        </div>
+      </div>
+    </div>
+
+  </section><!-- End Hero -->
+
+
+
+
+
+
+
+  <section id="about" class="about">
+    <div class="container">
+
+      <div class="section-title" data-aos="fade-up">
+        <h2>About Us</h2>
+      </div>
+
+      <div class="row content">
+        <div class="col-lg-6" data-aos="fade-up" data-aos-delay="150">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua.
+          </p>
+          <ul>
+            <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+            <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
+            <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+          </ul>
+        </div>
+        <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="300">
+          <p>
+            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <a href="#" class="btn-learn-more">Learn More</a>
+        </div>
+      </div>
+
+    </div>
+  </section><!-- End About Us Section -->
+
+
+
+
+
+
+
+
+  <section id="cars" class="services">
+    <div class="container">
+
+      <div class="section-title" data-aos="fade-up">
+        <h2>Services</h2>
+        <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fug</p>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+          <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+            <div class="icon"><i class="bx bxl-dribbble"></i></div>
+            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+          <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon"><i class="bx bx-file"></i></div>
+            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
+            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+          <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
+            <div class="icon"><i class="bx bx-tachometer"></i></div>
+            <h4 class="title"><a href="">Magni Dolores</a></h4>
+            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+          <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
+            <div class="icon"><i class="bx bx-world"></i></div>
+            <h4 class="title"><a href="">Nemo Enim</a></h4>
+            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </section><!-- End Services Section -->
+
+
+
+
+
+
+
+
+
+
+  <section id="contact" class="contact">
+    <div class="container">
+
+      <div class="section-title" data-aos="fade-up">
+        <h2>Contact Us</h2>
+      </div>
+
+      <div class="row">
+
+        <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="contact-about">
+            <h3>Vesperr</h3>
+            <p>Cras fermentum odio eu feugiat. Justo eget magna fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
+            <div class="social-links">
+              <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
+              <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
+              <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
+              <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
+          <div class="info">
+            <div>
+              <i class="ri-map-pin-line"></i>
+              <p>A108 Adam Street<br>New York, NY 535022</p>
+            </div>
+
+            <div>
+              <i class="ri-mail-send-line"></i>
+              <p>info@example.com</p>
+            </div>
+
+            <div>
+              <i class="ri-phone-line"></i>
+              <p>+1 5589 55488 55s</p>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="col-lg-5 col-md-12" data-aos="fade-up" data-aos-delay="300">
+          <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <div class="form-group">
+              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+              <div class="validate"></div>
+            </div>
+            <div class="form-group">
+              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+              <div class="validate"></div>
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+              <div class="validate"></div>
+            </div>
+            <div class="form-group">
+              <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+              <div class="validate"></div>
+            </div>
+            <div class="mb-3">
+              <div class="loading">Loading</div>
+              <div class="error-message"></div>
+              <div class="sent-message">Your message has been sent. Thank you!</div>
+            </div>
+            <div class="text-center"><button type="submit">Send Message</button></div>
+          </form>
+        </div>
+
+      </div>
+
+    </div>
+</section><!-- End Contact Section -->
