--- a/clover/src/app/components/car/car.component.html
+++ b/clover/src/app/components/car/car.component.html
@@ -53,6 +53,32 @@
 
       </div>
 
+      <div class="radio" style="width:150px;">
+        <div class="s002" >
+          <form>
+            <div class="inner-form">
+              <div class="input-field fifth-wrap">
+                <p style="color:lavenderblush; margin-left: 12%; margin-bottom: 20%;"> Sort</p>
+                <div class="input-field fifth-wrap">
+                  <div class="row">
+                    <input type="radio" value="name" name="sort" style="height: 1em; margin-left: -47%;">
+                    <p style="color:lavenderblush; margin-left: -40%; margin-top: -1%;"> Name</p>
+                  </div>
+                  <div class="row">
+                    <input type="radio" value="city" name="sort" style="height: 1em; margin-left: -47%;">
+                    <p style="color:lavenderblush; margin-left: -40%; margin-top: -1%;"> City</p>
+                  </div>
+                  <div class="row">
+                    <input type="radio" value="distance" name="sort" style="height: 1em; margin-left: -47%;">
+                    <p style="color:lavenderblush; margin-left: -40%; margin-top: -1%;"> Distance</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+
       
 
       <div [hidden]="filtredRentServices.length !== 0">
