--- a/clover/src/app/components/car/add-rent-a-car/add-rent-a-car.component.html
+++ b/clover/src/app/components/car/add-rent-a-car/add-rent-a-car.component.html
@@ -59,6 +59,12 @@
       </div>
     <!-- </div> -->
 
+    <div class="form-group">
+      Rent Service Rate:
+      <input #rateService="ngModel" [(ngModel)]="service.formData.rateService" name="rateService" type="number" class="form-input" id="rateService" placeholder="{{rentService.rateService}}" required/>
+      
+    </div>
+
       <div class="form-group">
         <input type="submit" [disabled]="form.invalid" name="submit" id="submit" class="form-submit" value="Add Rent Service"/>
     </div>
